Synchronized CSS in extensions with the main page style. Fixed dark color in the form if the device has dark mode.

--- a/pages/chrome-extensions/old/stop-loading-website-7/auto.css
+++ b/pages/chrome-extensions/old/stop-loading-website-7/auto.css
@@ -1,6 +1,8 @@
 /* Auto dark light CSS theme v.1.2.1 */
 /* if no main.js for set theme */
 
+* { color-scheme: light; } /* view-source:about:blank, fixed blink */
+
 /* light */
 :root{
 --bg: #EBEBEB;
@@ -45,6 +47,9 @@ html{ scrollbar-color: var(--d3) var(--l2); }
 
 /* dark */
 @media (prefers-color-scheme: dark) {
+
+* { color-scheme: dark; } /* view-source:about:blank, fixed blink */
+
 :root{
 --bg: #2D2D2E;
 --l: #2F2F30;
@@ -64,8 +69,8 @@ html{ scrollbar-color: var(--d3) var(--l2); }
 --c2R: #292929;
 --c3R: #1A1A1A;
 --c4R: #080808;
---red: #FF7066;
---red2: #FF938C;
+--red: #E66C5C;
+--red2: #FF7866;
 --orange: #FFD68C;
 --orange2: #FFDFA6;
 --yellow: #D9CA82;
