--- a/pages/firefox-extensions/old/rss-button-status-in-progress-9/main.css
+++ b/pages/firefox-extensions/old/rss-button-status-in-progress-9/main.css
@@ -1,14 +1,13 @@
-/* Main.css style v.23.12.0 */
+/* Main.css style v.23.14.0 */
 /* main.css + theme (auto.css, light.css ...) */
 /* The style is mostly based on classes. */
 
 /* Main */
 @charset "UTF-8";
-* { color-scheme: light dark; } /* view-source:about:blank, fixed blink */
 
 :root{
 /* .brand - link, accent color (red, orange, yellow, green, blue, indigo, violet) */
---brandColor: color-mix(in srgb, var(--blue) 80%, var(--violet));
+--brandColor: color-mix(in srgb, var(--blue) 80%, var(--blue));
 
 --brand: color-mix(in srgb, var(--brandColor) 70%, var(--c4));
 --brand2: color-mix(in srgb, var(--brandColor) 35%, var(--c4));
@@ -19,7 +18,7 @@
 --inputHeight: 45px;
 --fontSize: 14px;
 
-/* main.js (for nav) */
+/* edit in main.js for nav */
 --wrapper: 560px;
 --wrapper2: 700px;
 --wrapper3: 900px;
@@ -62,7 +61,7 @@ overflow-wrap: break-word;
 /*word-break: break-all;*/
 }
 html, body, input, button, textarea, select {
-font-size: 13.4px; font-size: 0.9375em; font-size: var(--fontSize);
+font-size: var(--fontSize);
 }
 
 nav a, a:hover { text-decoration: none; }
